--- a/P007882.opf/meta.yml
+++ b/P007882.opf/meta.yml
@@ -3,5 +3,18 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG3410
   title: གཅོད་ཚོགས་ཡོན་ཏན་ཀུན་འབྱུང་
-  volume: ''
+  volume:
+    ebe301e88d0948be91047fa60958d2c2:
+      image_group_id: I1KG3502
+      title: Volume 1 of gcod kyi tshogs las yon tan kun 'byung gsungs rgyun 'khrul
+        med ltar bkod pa'i dbu phyogs
+      volume_number: 1
+      total_pages: 174
   author: ''
+ebook_metadata:
+  title: གཅོད་ཚོགས་ཡོན་ཏན་ཀུན་འབྱུང་
+  author: ''
+  sku: P007882
+  cover: cover.jpg
+  layers:
+  - pagination
