--- a/P007882.opf/layers/v001/Pagination.yml
+++ b/P007882.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: e72952bd541a49b08885f284f5c168c3
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   6b09f1c196934e08bdbd0ac366965055:
