--- a/P007882.opf/meta.yml
+++ b/P007882.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P007882
 initial_creation_type: ocr
 created_at: 22/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:47:01.120857
 source_metadata:
   id: bdr:W1KG3410
   title: གཅོད་ཚོགས་ཡོན་ཏན་ཀུན་འབྱུང་
@@ -14,3 +14,5 @@ source_metadata:
       volume_number: 1
       total_pages: 174
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
